--- a/style.css
+++ b/style.css
@@ -35,7 +35,8 @@ body * {
 
 #container {
   padding: 24px;
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   margin: 56px auto 0px;
 }
 
@@ -76,7 +77,7 @@ body * {
   transform: translateY(-50%);
 }
 
-.light #switch button{
+.light #switch button {
   right: 0;
   left: initial;
 }
