--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   --stroke-color: rgba(255, 255, 255, 0.5);
   --surface-color: rgba(255, 255, 255, 0.05);
   --surface-color-hover: rgba(0, 0, 0, 0.02);
-  --highlight-color: rgba(255, 255, 255, 0.02);
+  --highlight-color: rgba(255, 255, 255, 0.04);
   --switch-bg-url: url(./assets/moon-stars.svg);
 }
 
@@ -74,13 +74,18 @@ body * {
   position: absolute;
   top: 50%;
   left: 0;
+  animation: slide-out 0.3s;
   z-index: 1;
   transform: translateY(-50%);
+  transition: 0.4s;
 }
 
 .light #switch button {
-  right: 0;
-  left: initial;
+  animation: slide-in 0.3s forwards;
+}
+
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
 }
 
 #switch span {
@@ -158,11 +163,31 @@ footer {
   font-size: 14px;
 }
 
-@media (min-width: 700px){
-  :root{
-    --bg-url: url(./assets/bg-desktop.jpg)
+/*media queries*/
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
   }
-  .light{
-    --bg-url: url(./assets/bg-desktop-light.jpg)
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
+
+/*animação*/
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-out {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
+  }
 }
